--- a/frontend/src/components/Tabs/Accordion/Accordion.module.scss
+++ b/frontend/src/components/Tabs/Accordion/Accordion.module.scss
@@ -1,7 +1,4 @@
-$table-header: #1976d2;
-$table-header-border: #1565c0;
-$table-border: #d9d9d9;
-$row-bg: #f4f2f1;
+@import '../../../styles//variables.scss';
 
 .overview__tab {
     width: 100%;
@@ -13,9 +10,12 @@ $row-bg: #f4f2f1;
         justify-content: normal;
         align-items: normal;
         align-content: normal;
-        background: #FAFAFA;
         height: 80px;
         border-bottom: 1px solid #E8E8E8;
+      }
+
+      &_row:last-child {
+        height: 59px;    
       }
 
       &_column {
@@ -27,6 +27,7 @@ $row-bg: #f4f2f1;
         font-weight: 500;
         font-size: 14px;
         line-height: 140%;
+        background: $row-bg;
     }
 
     &_column:nth-child(1) {
@@ -54,6 +55,11 @@ $row-bg: #f4f2f1;
         height: 80px;
         border-bottom: 1px solid #E8E8E8;
       }
+
+    &_row:last-child {
+        height: 59px;    
+    }
+
     &_column {
         width: 9%;
         display: flex;
@@ -63,9 +69,10 @@ $row-bg: #f4f2f1;
         font-weight: 500;
         font-size: 14px;
         line-height: 140%;
+        background: #F8F8F8;
     }
 
-    &_column:nth-child(1) {  
+    &_column:nth-child(1) { 
         display: flex;
         justify-content: center;
         align-items: center;
@@ -87,17 +94,6 @@ $row-bg: #f4f2f1;
         font-size: 14px;
         line-height: 140%;
     }
-
-    &_notFound {
-        background-color: #FAFAFA;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 80px;
-        font-size: 16px;
-        font-weight: bold;
-        text-transform: uppercase;
-    }
 }
       
 //Accordion header
@@ -115,11 +111,11 @@ $row-bg: #f4f2f1;
         align-items: center;
         justify-content: center;
         border: none;
-        border: 2.5px solid #F7797D;
+        border: 2.5px solid $primary-color;
         background: transparent;
-        color: #F7797D;
-        width: 24px;
-        height: 24px;
+        color: $primary-color;
+        width: 20px;
+        height: 20px;
         font-weight: bold;
         line-height: 9px;
         cursor: pointer;
@@ -133,3 +129,13 @@ $row-bg: #f4f2f1;
     }
 }
 
+.tab_notFound {
+    background-color: $container-bg;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
