--- a/frontend/src/components/Filters/Filters.module.scss
+++ b/frontend/src/components/Filters/Filters.module.scss
@@ -1,30 +1,52 @@
-.wrapper {
-    background: #FAFAFA;
-    padding: 0 11%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 256px;
+@import '../../styles/mixins.scss';
+@import '../../styles/variables.scss';
 
+.container {
+    @include container-flex;
+    background: $container-bg;
+
+.wrapper {
+    @include content-width;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    
     &__flex {
         position: relative;
-        width: 25%;
         height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        height: 256px;
 
         &_label {
             position: absolute;
-            left: 10%;
+            left: 0;
             top: 55px;
             text-transform: uppercase;
             font-size: 14px;
             color: #9C9C9C;
         }
 
+        .select_wrapper {
+            position: relative;
+        }
+    
+        .select_wrapper:after {
+            content: '\25BE';
+            font-size: 2.5rem;
+            top: 2px;
+            right: 10px;
+            position: absolute;
+            color: rgba(0, 0, 0, 0.54);
+          }
+
         &_filter {
+            -webkit-appearance: none;
+            appearance: none;
+            position: relative;
             width: 253px;
             height: 56px;
             border-radius: 8px;
@@ -37,6 +59,8 @@
         }
     }
 
+    
+
     &__clearFilter_btn {
         color: #F7797D;
         font-size: 13px;
@@ -46,13 +70,11 @@
         border: 2px solid #F7797D;
         padding: 4px;
         position: absolute;
-        right: 10px;
+        right: 0;
         top: 160px;
         border-radius: 4px;
         background: transparent;
         cursor: pointer;
     }
 }
-
-//style dla option
-
+}
