--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,16 +1,13 @@
 body {
     margin: 0;
     padding: 0;
+    width: 100%;
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
   }
   
   code {
@@ -23,4 +20,4 @@ body {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
   }
-  
+
